refactor: refactor code for user, customer